execute Part 1 (Pytorch 0.4.1)

--- a/Part 1 - Tensors in PyTorch.ipynb
+++ b/Part 1 - Tensors in PyTorch.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,20 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.9107  0.7433\n",
-       " 0.7535  0.6031\n",
-       " 0.7666  0.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[0.9204, 0.0504],\n",
+       "        [0.0009, 0.6627],\n",
+       "        [0.9934, 0.8160]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,11 +144,9 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1  1\n",
-       " 1  1\n",
-       " 1  1\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]])"
       ]
      },
      "execution_count": 5,
@@ -171,11 +167,9 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1.9107  1.7433\n",
-       " 1.7535  1.6031\n",
-       " 1.7666  1.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[1.9204, 1.0504],\n",
+       "        [1.0009, 1.6627],\n",
+       "        [1.9934, 1.8160]])"
       ]
      },
      "execution_count": 6,
@@ -203,10 +197,7 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1.9107\n",
-       " 1.7433\n",
-       "[torch.FloatTensor of size 2]"
+       "tensor([1.9204, 1.0504])"
       ]
      },
      "execution_count": 7,
@@ -226,11 +217,9 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1.7433\n",
-       " 1.6031\n",
-       " 1.8878\n",
-       "[torch.FloatTensor of size 3x1]"
+       "tensor([[1.0504],\n",
+       "        [1.6627],\n",
+       "        [1.8160]])"
       ]
      },
      "execution_count": 8,
@@ -257,11 +246,9 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433\n",
-       " 2.7535  2.6031\n",
-       " 2.7666  2.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[2.9204, 2.0504],\n",
+       "        [2.0009, 2.6627],\n",
+       "        [2.9934, 2.8160]])"
       ]
      },
      "execution_count": 9,
@@ -282,11 +269,9 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 1.9107  1.7433\n",
-       " 1.7535  1.6031\n",
-       " 1.7666  1.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[1.9204, 1.0504],\n",
+       "        [1.0009, 1.6627],\n",
+       "        [1.9934, 1.8160]])"
       ]
      },
      "execution_count": 10,
@@ -307,11 +292,9 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433\n",
-       " 2.7535  2.6031\n",
-       " 2.7666  2.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[2.9204, 2.0504],\n",
+       "        [2.0009, 2.6627],\n",
+       "        [2.9934, 2.8160]])"
       ]
      },
      "execution_count": 11,
@@ -332,11 +315,9 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433\n",
-       " 2.7535  2.6031\n",
-       " 2.7666  2.8878\n",
-       "[torch.FloatTensor of size 3x2]"
+       "tensor([[2.9204, 2.0504],\n",
+       "        [2.0009, 2.6627],\n",
+       "        [2.9934, 2.8160]])"
       ]
      },
      "execution_count": 12,
@@ -386,10 +367,8 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433  2.7535\n",
-       " 2.6031  2.7666  2.8878\n",
-       "[torch.FloatTensor of size 2x3]"
+       "tensor([[2.9204, 2.0504, 2.0009],\n",
+       "        [2.6627, 2.9934, 2.8160]])"
       ]
      },
      "execution_count": 14,
@@ -409,10 +388,8 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 2.9107  2.7433  2.7535\n",
-       " 2.6031  2.7666  2.8878\n",
-       "[torch.FloatTensor of size 2x3]"
+       "tensor([[2.9204, 2.0504, 2.0009],\n",
+       "        [2.6627, 2.9934, 2.8160]])"
       ]
      },
      "execution_count": 15,
@@ -441,10 +418,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.33669496,  0.59531562,  0.65433944],\n",
-       "       [ 0.86531224,  0.59945364,  0.28043973],\n",
-       "       [ 0.48409303,  0.98357622,  0.33884284],\n",
-       "       [ 0.25591391,  0.51081783,  0.39986403]])"
+       "array([[0.05083677, 0.42198212, 0.60638293],\n",
+       "       [0.04874503, 0.80083201, 0.90172998],\n",
+       "       [0.2313838 , 0.7700987 , 0.11400126],\n",
+       "       [0.09406536, 0.68880433, 0.55712252]])"
       ]
      },
      "execution_count": 16,
@@ -465,12 +442,10 @@
     {
      "data": {
       "text/plain": [
-       "\n",
-       " 0.3367  0.5953  0.6543\n",
-       " 0.8653  0.5995  0.2804\n",
-       " 0.4841  0.9836  0.3388\n",
-       " 0.2559  0.5108  0.3999\n",
-       "[torch.DoubleTensor of size 4x3]"
+       "tensor([[0.0508, 0.4220, 0.6064],\n",
+       "        [0.0487, 0.8008, 0.9017],\n",
+       "        [0.2314, 0.7701, 0.1140],\n",
+       "        [0.0941, 0.6888, 0.5571]], dtype=torch.float64)"
       ]
      },
      "execution_count": 17,
@@ -580,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
