--- a/Part 2 - Neural Networks in PyTorch.ipynb
+++ b/Part 2 - Neural Networks in PyTorch.ipynb
@@ -132,13 +132,13 @@
     "\n",
     "Here I'll use PyTorch to build a simple feedfoward network to classify the MNIST images. That is, the network will receive a digit image as input and predict the digit in the image.\n",
     "\n",
-    "<img src=\"assets/mlp_mnist.png\" width=600px>\n",
+    "<img src=\"assets/mlp_mnist.png\" width=600px />\n",
     "\n",
     "To build a neural network with PyTorch, you use the `torch.nn` module. The network itself is a class inheriting from `torch.nn.Module`. You define each of the operations separately, like `nn.Linear(784, 128)` for a fully connected linear layer with 784 inputs and 128 units.\n",
     "\n",
     "The class needs to include a `forward` method that implements the forward pass through the network. In this method, you pass some input tensor `x` through each of the operations you defined earlier. The `torch.nn` module also has functional equivalents for things like ReLUs in `torch.nn.functional`. This module is usually imported as `F`. Then to use a ReLU activation on some layer (which is just a tensor), you'd do `F.relu(x)`. Below are a few different commonly used activation functions.\n",
     "\n",
-    "<img src=\"assets/activation.png\" width=700px>\n",
+    "<img src=\"assets/activation.png\" width=700px />\n",
     "\n",
     "So, for this network, I'll build it with three fully connected layers, then a softmax output for predicting classes. The softmax function is similar to the sigmoid in that it squashes inputs between 0 and 1, but it's also normalized so that all the values sum to one like a proper probability distribution."
    ]
