--- a/Part 2 - Neural Networks in PyTorch.ipynb
+++ b/Part 2 - Neural Networks in PyTorch.ipynb
@@ -149,13 +149,13 @@
    "source": [
     "이제 Pytorch를 사용해서 MNIST 이미지들을 분류할 수 있는 간단한 구조의 feedforward 신경망을 만들고자 한다. 다시 말해, 신경망이 입력으로 숫자 이미지를 받고, 이미지 상의 숫자를 예측하는 것이다.\n",
     "\n",
-    "<img src=\"assets/mlp_mnist.png\" width=600px>\n",
+    "<img src=\"assets/mlp_mnist.png\" width=\"600\" />\n",
     "\n",
     "Pytorch를 사용해서 신경망을 만들기 위해, 여기서는 `torch.nn` 모듈을 사용했다. 신경망 자체는 `torch.nn.Module`라는 모듈을 상속받는 클래스로 되어 있다. 748개의 입력을 받고, 128개의 노드로 구성되어 있는 fully connected layer를 생성하는데 `nn.Linear(784, 128)`라고 정의하는 것처럼, 계층을 각각 정의할 수 있다.\n",
     "\n",
     "해당 class는 신경망을 통과하는 forward pass를 구현한 `forward`란 method가 포함되어야 한다. 이 함수안에다, 앞에서 사전에 정의한 각 계층을 통과시킬 입력 tensor `x`를 인자로 넣을 것이다. `torch.nn` 모듈은 `torch.nn.functional`안에 정의되어 있는 ReLU와 기능적으로 동일하게 동작하는 것도 가지고 있다. 해당 모듈은 일반적으로 `F`라는 이름으로 가져온다. (단지 tensor로만 되어 있는) 몇몇 계층에서 ReLU 활성 함수를 사용하기 위해서는, `F.relu(x)`를 수행하면 된다. 아래의 그림들은 흔하게 사용되는 활성함수들을 보여주고 있다.\n",
     "\n",
-    "<img src=\"assets/activation.png\" width=700px>\n",
+    "<img src=\"assets/activation.png\" width=\"700px\" />\n",
     "\n",
     "이번 신경망 설계시 3개의 Fully connected layer를 가지고 만든 후에 클래스를 예측하기 위한 softmax 출력을 활용할 것이다. softmax 함수는 보통 입력을 0과 1사이 값으로 압축시켜주는 sigmoid 함수와 비슷하지만, softmax는 적절한 확률분포를 띄는 것처럼 모든 함이 1이되는 값들로 정규화시켜주는 역할을 한다."
    ]
